Changed style sheet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Blue Army Knife</title>
         <meta name="description" content="A tool for security analysts.">
-        <link rel="stylesheet" href="test.css" />
+        <link rel="stylesheet" href="style.css" />
 
         <script>
             function toggleNav() {
